# taiko-image-generator

./: .gitignore  Cargo.toml  README.md  main.py  notes.magick  notes_large.magick  notes_renda_1.magick  notes_renda_2.magick  pyproject.toml  pyrightconfig.json  taiko.magick
src/: main.rs
